--- a/TimeTris/style.css
+++ b/TimeTris/style.css
@@ -174,24 +174,33 @@ li
 .row 
 {
     width: 100%;
-    height: 10px;
+    height: 3.25vh;
     display: flex;
     justify-content: center;
 }
 
 .block
 {
-    width: 10px;
+    width: 3.25vh;
     height: 100%;
     background-color: rgb(53, 49, 63);
     border: 1px solid grey;
 }
 
 .tblock,
-.lblock
+.lblock,
+.oblock,
+.jblock,
+.iblock,
+.sblock,
+.zblock
 {
-    width: 10px;
+    width: 3.25vh;
     height: 100%;
+}
+
+.tblock
+{
     background-color: blueviolet;
     border: 1px solid rgb(98, 35, 207);
 }
@@ -200,4 +209,34 @@ li
 {
     background-color: orange;
     border: 1px solid rgb(215, 108, 1);
+}
+
+.iblock
+{
+    background-color: cyan;
+    border: 1px solid rgb(7, 160, 226);
+}
+
+.oblock
+{
+    background-color: yellow;
+    border: 1px solid rgb(178, 151, 16);
+}
+
+.sblock
+{
+    background-color: green;
+    border: 1px solid rgb(5, 108, 43);
+}
+
+.zblock
+{
+    background-color: red;
+    border: 1px solid rgb(155, 15, 61);
+}
+
+.jblock
+{
+    background-color: blue;
+    border: 1px solid rgb(14, 5, 175);
 }
