--- a/TimeTris/style.css
+++ b/TimeTris/style.css
@@ -59,6 +59,8 @@ li
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background-image: url("images/headertris.jpg");
+    background-size: 50%;
 }
 
 #all
