--- a/TimeTris/style.css
+++ b/TimeTris/style.css
@@ -2,6 +2,12 @@
 {
     margin: 0;
     padding: 0;
+    font-family: Tetris;
+}
+
+@font-face {
+    font-family: Tetris;
+    src: url(font/Tetris.ttf);
 }
 
 header
