--- a/xd/russ.css
+++ b/xd/russ.css
@@ -8,11 +8,11 @@ body {
 }
 
 canvas {
-    filter: drop-shadow(5px 5px 2px rgb(113, 113, 113));
+    filter: drop-shadow(5px 5px 2px black);
 }
 
-.cube {
-    width: 10px;
-    height: 10px;
+#container {
+    width: 2vh;
+    height: 2vh;
     background-color: red;
 }
