--- a/xd/russ.css
+++ b/xd/russ.css
@@ -12,7 +12,8 @@ canvas {
 }
 
 #container {
-    width: 2vh;
-    height: 2vh;
-    background-color: red;
+    width: 5vh;
+    height: 5vh;
+    background-color: white;
+    border: 1px solid red;
 }
