--- a/TimeTris/style.css
+++ b/TimeTris/style.css
@@ -86,6 +86,12 @@ li
     background-color: red;
 }
 
+#gameFrame
+{
+    width: 100%;
+    height: 100%;
+}
+
 .tittle
 {
     margin: 0 20% 0 30%;
