--- a/TimeTris/style.css
+++ b/TimeTris/style.css
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
     font-family: Tetris;
+    overflow: hidden;
 }
 
 @font-face {
@@ -73,7 +74,7 @@ li
 {
     margin: 0 10%;
     width: 80%;
-    height: 80vh;
+    height: 904px;
     display: flex;
     justify-content: space-between;
     border: 1px solid blue;
@@ -140,47 +141,8 @@ li
     height: 20vh;
 }
 
-.Interfaz
+#game
 {
     width: 100%;
     height: 100%;
-    display: flex;
-    align-items: center;
-}
-
-.Interfaz .box
-{
-    flex: 1;
-    height: 100%;
-}
-
-.Interfaz #game
-{
-    flex: 4;
-    height: 100%;
-    border: 1px solid blue;
-}
-
-.Interfaz .box .xob
-{
-    height: 20vh;
-    border: 1px solid red;
-}
-
-.Interfaz .box .xob:first-child
-{
-    height: 10vh;
-    margin-bottom: 1.7vh;
-}
-
-.Interfaz .box .xob:last-child h4
-{
-    margin-top: 5vh;
-    text-align: center;
-}
-
-.xd .box
-{
-    height: 20vh;
-    border: 1px solid blue;
 }
